additional packet defs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ set(LIB_FILES
     src/MQTTClient.cpp
     src/MQTTFactory.cpp
     src/MQTTOptions.cpp
+    src/MQTTPacket.cpp
     src/MQTTProcessor.cpp
 )
 
