Publish packet coding

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ set(LIB_FILES
     src/MQTTPacket.cpp
     src/MQTTPacketOptions.cpp
     src/MQTTProcessor.cpp
+    src/MQTTPublishPacket.cpp
     src/MQTTTrackedPacket.cpp
 )
 
