--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ set (BIN_DIR ${CMAKE_BINARY_DIR}/staging/bin)
 
 set(LIB_FILES
     src/MQTTClient.cpp
+    src/MQTTConnectPacket.cpp
     src/MQTTFactory.cpp
     src/MQTTPacket.cpp
     src/MQTTPacketOptions.cpp
